Updated online database details for new database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6492402?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username = sql6492402
-spring.datasource.password = Qlcp4JiPNV
+spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6492935?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username = sql6492935
+spring.datasource.password = ICis7tB1R8
 
 
 spring.jpa.hibernate.ddl-auto = update
