Updated online database details for azure database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6492935?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username = sql6492935
-spring.datasource.password = ICis7tB1R8
+spring.datasource.url = jdbc:mysql://ravindu-lashan-mysql-db.mysql.database.azure.com:3306/paytime_db?allowPublicKeyRetrieval=true&useSSL=true
+spring.datasource.username = mysqldb@ravindu-lashan-mysql-db
+spring.datasource.password = ravindu@2022
 
 
 spring.jpa.hibernate.ddl-auto = update
